<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="600dp"
    android:orientation="vertical"
    android:background="@drawable/dvwall"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="top"
    android:padding="20dp">

    <!--ANIMACIÓN-->
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="-5dp"
        android:layout_gravity="center"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="finjuego.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <TextView
        android:id="@+id/Fin"
        android:text="@string/finTxt"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/killsTxt"
        android:text="@string/killsTxt"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/NumeroTxt"
        android:text="@string/NumeroTxt"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PlayAgain"
        android:text="@string/PlayAgain"
        android:background="@drawable/botongameover"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/irMenu"
        android:text="@string/irMenu"
        android:background="@drawable/botongameover"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Puntuacion"
        android:text="@string/Puntuacion"
        android:background="@drawable/botongameover"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"/>

</androidx.appcompat.widget.LinearLayoutCompat>