<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:background="#566573"
        android:orientation="vertical">

        <TextView
            android:id="@+id/DesarrolladoPorTxt"
            android:text="@string/DesarrolladoPorTxt"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/DesarrolladorTxt"
            android:text="@string/DesarrolladorTxt"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:background="@drawable/android"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp"/>


        <TextView
            android:id="@+id/LinkLinkedin"
            android:text="@string/LinkLinkedin"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ok"
            android:text="@string/ok"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>