<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tatooine"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!--ANIMACIÓN-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="50dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="dv.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>

        <!--EMAIL-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailLogin"
                android:hint="@string/emailLogin"
                android:background="@color/tattoine"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

       <!--PASSWORD-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passLogin"
                android:hint="@string/passLogin"
                android:background="@color/tattoine"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--LOGUEO BOTON-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BotonLogin"
            android:text="@string/BotonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botonacceso"
            android:textColor="@color/white"
            android:textAllCaps="false"/>

        <!--RESTABLECER BOTON-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BotonRestablecer"
            android:text="@string/BotonRestablecer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botonacceso"
            android:textColor="@color/white"
            android:textAllCaps="false"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>